# opupupa_HSE_LinkShortener

./: .env  .env.test  .gitignore  Dockerfile  LICENSE  README.md  TECH_SPEC.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docker/: docker-compose.redis.yml
docker/redis/: Dockerfile
src/application/dto/: auth_dto.py  link_dto.py  project_dto.py
src/application/errors/: errors.py
src/application/services/: password_hasher.py  short_code_generator.py  time_provider.py  token_provider.py
src/application/use_cases/: create_project.py  delete_link.py  delete_project.py  get_link_info.py  get_link_stats.py  get_project.py  list_expired_links.py  list_project_links.py  list_projects.py  login_user.py  purge_expired_links.py  register_user.py  resolve_link.py  search_link_by_original_url.py  shorten_link.py  update_link.py  update_project.py
src/domain/entities/: base.py  link.py  link_stats.py  project.py  user.py
src/domain/repositories/: base.py  link_repository.py  link_stats_repository.py  project_repository.py  unit_of_work.py  user_repository.py
src/domain/value_objects/: expires_at.py  original_url.py  short_code.py
src/infrastructure/: config.py  settings.py
src/infrastructure/auth/: __init__.py  password_hasher.py  token_provider.py
src/infrastructure/cache/: __init__.py  link_cache.py  redis_client.py
src/infrastructure/db/: __init__.py  engine.py  session.py  unit_of_work.py
src/infrastructure/jobs/: __init__.py  purge_expired_links_job.py
src/infrastructure/repositories/: __init__.py  link_repository.py  link_stats_repository.py  project_repository.py  user_repository.py
src/presentation/: errors.py
src/presentation/api/: app.py  deps.py
src/presentation/schemas/: auth.py  links.py  project.py
src/presentation/static/: app.js  index.html  styles.css
tests/: conftest.py
tests/functional/: conftest.py
tests/functional/api/: test_auth.py  test_cache_behaviour.py  test_expiration_behaviour.py  test_links.py  test_projects.py  test_redirect.py  test_smoke.py
tests/integration/: conftest.py  test_auth_flow.py  test_cache_invalidation.py  test_error_handling.py  test_expiration_rules.py  test_link_creation.py  test_link_resolution.py  test_link_stats.py  test_link_update_delete.py  test_projects_flow.py  test_purge_expired_links_integration.py  test_purge_expired_links_job_integration.py  test_rate_limit.py  test_search_and_discovery.py
tests/load/: locustfile.py  report.html
tests/unit/: conftest.py
tests/unit/application/: test_create_project.py  test_delete_link.py  test_delete_project.py  test_get_link_info.py  test_get_link_stats.py  test_get_project.py  test_list_expired_links.py  test_list_project_links.py  test_list_projects.py  test_login_user.py  test_purge_expired_links.py  test_register_user.py  test_resolve_link.py  (+4 more)
(+32 files in other folders)
